# swimm-reStructuredText

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: swimm.yaml
.swm/: LwBS56U5tvXHBSzGWZFi.swm  WXN352vkIYlAMvMhFr72.swm  XLfciAQGrFtr1n8iqrYX.swm  k37MDvCUoji3bNKPP2HO.swm  sa8OJ7ykaRp356ZZEb7I.swm  swimm.json
.swm/swm_docs/: DaWu3KFiU2cA1DHpsxDf.md  mgSfpFVTvucjsGx3M3np.md
docs/: conf.py  index.rst
docs/units/: displaying_code.rst  example_code.py  external_links.rst  headings.rst  text_formatting.rst
docs/units/including_rst_files/: first_chapter.rst  intro.rst  main_file.rst  second_chapter.rst
