[tool.poetry]
name = "swimm-restructuredtext"
version = "0.1.0"
description = "Learn ReST with swimm!"
authors = ["Shay Nehmad <shayn@recolabs.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^3.4.3"
sphinx-autobuild = "^2020.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
